# Minimum-gRPC-ImGUI-ClientServerTEMPLATE

./: .gitignore  CMakeLists.txt  README.md  SETUP.sh
client/: CMakeLists.txt
client/src/: Application.cpp  Application.h  PingDemo.h  main.cpp
cmake/: common.cmake  costum-config.cmake
server/: CMakeLists.txt
server/src/: Server.cpp  Server.h
utils/: CMakeLists.txt  Your_Project_protocol.proto  test.h
